--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/uikit.min.css" type="text/css"/>
     <script src="/js/uikit.min.js"></script>
     <script src="/js/uikit-icons.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
